# nox-config

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  noxfile.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
.github/workflows/composite/setup-python/: action.yml
nox_config/: formatters.py  linters.py  linting.py  testing.py  tool.py
nox_helpers/: formatting.py  linting.py  testing.py
nox_tools/: linting.py  testing.py
tests/: conftest.py  test_formatters.py  test_formatting.py  test_linters.py  test_linting.py  test_testing.py  test_tool.py  test_tooling.py
